Work-around (or fix?) for Bug #1776:  help input gets horizontal scrollbar in FF on OS X.

--- a/web-UI/css/andes.css
+++ b/web-UI/css/andes.css
@@ -184,7 +184,7 @@ body, .tundra .dijitSplitter, #navMenu{
 	height:20px;
 	line-height:20px;
 }
-#helpInputPane .dijitButton{
+#helpInputPane .dijitButtonNode{
 	margin:0;
 	position:absolute;
 	right:5px;
